feat(Profile): Create and update user profile
- create update profile endpoint
- create get current Profile endpoint
- Add update profile validation
- Create integration tests
- Update swagger documentation

[Delivers #160452480]
